[package]
name = "PaperTrader"
version = "0.1.0"
authors = ["realaltffour <56314286+realaltffour@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "libtrader"
path = "src/libtrader/libtrader.rs"
test = true
bench = true
doctest = false

[[bin]]
name = "sandbox"
path = "src/bin/sandbox/sandbox.rs"
test = false
bench = false

[features]
default = []
master_server = []
worker_server = []
client = []
tls_no_verify = ["rustls/dangerous_configuration"]

[dependencies]
chrono = "0.4"
postgres = "0.17.3"
postgres-types = {version = "0.1.1", features = ["derive"]}
log = "0.4"
simplelog = "0.8.0"
enum_primitive = "*"
os_type="2.2"
ring="*"
data-encoding="*"
bincode="*"
serde={ version = "1.0", features = ["derive"] }
rustls="0.18.0"
mio={ version = "0.7.0", features = ["os-poll", "tcp"] }
webpki="0.21.0"
webpki-roots="0.20"
ct-logs="0.7"
either="*"
