[package]
name = "PaperTrader"
version = "0.4.0"
authors = ["ayham <altffour@protonmail.com>"]
edition = "2018"

[lib]
name = "libtrader"
path = "src/libtrader/libtrader.rs"
test = true
bench = true
doctest = false

[[bin]]
name = "sandbox"
path = "src/bin/sandbox/sandbox.rs"
test = false
bench = false

[features]
default = ["server", "client"]
server = []
client = []
tls_no_verify = ["tokio-rustls/dangerous_configuration"]

[dependencies]
argh = "*"
chrono = "0.4"
tokio = { version = "*", features = [ "full" ] }
tokio-io = "*"
tokio-rustls = { version = "*" }
tokio-util = { version = "*" }
webpki-roots = { version = "*" }
futures = "*"
bytes = "*"
postgres = "0.17.3"
postgres-types = {version = "0.1.1", features = ["derive"]}
log = "0.4"
simplelog = "0.8.0"
enum_primitive = "*"
os_type="2.2"
ring="*"
data-encoding="*"
bincode="*"
serde={ version = "1.0", features = ["derive"] }
ct-logs="0.7"
either="*"
arrayref="*"
rust-crypto="0.2.36"
jsonwebtoken="*"
json="*"
bitflags="*"
