[package]
name = "PaperTrader"
version = "0.4.0"
authors = ["ayham <altffour@protonmail.com>"]
edition = "2018"

[lib]
name = "libtrader"
path = "src/libtrader/libtrader.rs"
test = true
bench = true
doctest = false

[[bin]]
name = "sandbox"
path = "src/bin/sandbox/sandbox.rs"
test = false
bench = false

[features]
default = ["server", "client"]
server = []
client = []
tls_no_verify = ["tokio-rustls/dangerous_configuration"]

[dependencies]
argh = "*"
chrono = "0.4"
tokio = { version = "1.6.1", features = [ "full" ] }
tokio-io = { version = "0.1.13" }
tokio-rustls = { version = "0.22.0" }
tokio-util = { version = "0.6.7" }
tokio-postgres = { version = "0.7.2" }
webpki-roots = { version = "0.21" }
futures = "*"
bytes = "*"
#postgres = { version = "0.4.0" }
postgres-types = { version = "0.2.1", features = ["derive"] }
log = "0.4"
fern = { version = "0.6.0", features = ["colored"] }
enum_primitive = "*"
os_type="2.2"
ring="*"
data-encoding="*"
bincode="*"
serde = { version = "1.0", features = ["derive"] }
ct-logs="0.7"
either="*"
arrayref="*"
rust-crypto="0.2.36"
jsonwebtoken="*"
json="*"
bitflags="*"
rand="*"
